--- a/app/android/gradle.properties
+++ b/app/android/gradle.properties
@@ -42,3 +42,6 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+
+reactNativeNodeExecutableAndArgs=/Users/mak/.nvm/versions/node/v22.21.1/bin/node
