--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "dotenv -e ../.env -- bun run dist/index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "hono": "^4.10.6"
