--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "push-my-way-backend",
   "scripts": {
     "dev": "dotenv -e ../.env -- bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --outdir dist",
+    "build": "bun build src/index.ts --outdir dist --target node",
     "start": "dotenv -e ../.env -- bun run dist/index.js"
   },
   "dependencies": {
