--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,5 +4,10 @@
       "source": "/(.*)",
       "destination": "/api"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "includeFiles": "src/**"
+    }
+  }
 }
